Add spark resources