@@ -1,9 +1,29 @@
 name := "spark"
+//add this as VM option when running locally
+//--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
 
-libraryDependencies ++= Seq(
-  "org.apache.spark" %% "spark-core" % "3.5.1" % Provided,
-  "org.apache.spark" %% "spark-sql"  % "3.5.1" % Provided
-)
+//flag to switch how spark libraries are included
+val isLocal = sys.env.get("LOCAL_MODE").contains("1")
+
+  libraryDependencies ++= {
+    println("Local mode = "+isLocal)
+    if (isLocal) {
+      //In local mode (IDE), we want the spark libraries
+      //set LOCAL_MODE as env variable in your IDE
+      Seq(
+        "org.apache.spark" %% "spark-core" % "3.5.1", //% Provided,
+        "org.apache.spark" %% "spark-sql" % "3.5.1" //% Provided
+      )
+    } else {
+      //when building a jar to deploy, do not include spark
+      //turn off LOCAL_MODE when running sbt assembly!
+      Seq(
+        "org.apache.spark" %% "spark-core" % "3.5.1" % Provided,
+        "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided
+      )
+    }
+  }
+//}
 
 Compile / mainClass := Some("org.cscie88c.spark.SparkJob")
 
